# mohirAI-realtime-stt

./: .env.example  .gitignore  Dockerfile  config.py  main.py  pyproject.toml
stt/: __init__.py  log_setup.py  stt_realtime.py
